--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+<head lang="en-US">
     <meta charset="utf-8">
     <title>Rock Paper Scissors</title>
-    <script src="./script.js"></script>
+    <script defer src="./script.js"></script>
 </head>
-
 <body>
+    <h1>Rock Paper Scissors</h1>
+    <div class="playerSelection">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissor">Scissor</button>
+    </div>
+    <p>Result: </p>
 </body>
 </html>
