--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Rules</h2>
     <ul>
         <li>Make a Choice:  Rock ⛰️ || Paper 🪄 || Scissor 🔪</li>
-        <li>Attack As If Your Life Depended On It 💀</li>
+        <li>Attack, As If Your Life Depended On It 💀</li>
         <li>May God Be With You ✝️</li>
     </ul>
     </div>
